--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,8 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Hanlin Sun # Website name
-baseURL: 'https://hanlinsun97.me/' # Website URL
+title:  Zhuan Li # Website name
+baseURL:  'https://zhuanli.netlify.app' # Website URL
 
 ############################
 ## LANGUAGE
