--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -17,7 +17,7 @@ main:
     url: '#activities'
     weight: 40
   - name: CV
-    url: uploads/resume.pdf
+    url:  uploads/CV2023.1.24.pdf
     weight: 50
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
