--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,15 +10,18 @@ main:
   - name: Experience
     url: '#experience'
     weight: 20
-  - name: Publications
-    url: '#featured'
-    weight: 30
   - name: Activities
     url: '#activities'
+    weight: 30
+  - name: Projects
+    url: '#projects'
     weight: 40
+  - name: Publications
+    url: '#publications'
+    weight: 50
   - name: CV
     url:  uploads/CV2023.1.24.pdf
-    weight: 50
+    weight: 60
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
  
