--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -20,7 +20,7 @@ main:
     url: '#publications'
     weight: 90
   - name: CV
-    url:  uploads/CV2023.3.6.pdf
+    url:  static/uploads/CV.pdf
     weight: 100
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
