--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -53,7 +53,7 @@ footer:
 # Localization
 
 locale:
-  date_format: 'Jan 2, 2006'
+  date_format: ''
   time_format: '3:04 PM'
   address_format: en-us
 
@@ -66,7 +66,7 @@ features:
       - r
       - latex
   math:
-    enable: false
+    enable: true
   privacy_pack:
     enable: false
   repository:
